2011-06-25  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/cmd_initbus.c: Drop useless double const keywords.

2011-06-24  Mike Frysinger  <vapier@gentoo.org>

  * acinclude.m4: Add a new AS_VAR_PREPEND helper.
  * configure.ac: Use AS_VAR_PREPEND rather than touching the var directly.

  * configure.ac: Use AS_VAR_APPEND rather than touching the var directly.

  * configure.ac: Do not add libusb/libftdi to LIBS directly as these are
    used for all libs/apps in the tree, and we only want to use these with
    specific ones.  Export LIBFTDI_LIBS/LIBUSB_LIBS to Makefile.am files.
  * src/Makefile.am: Use new LIBFTDI_LIBS/LIBUSB_LIBS in liburjtag.la LIBADD.

2011-06-23  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/Makefile.am: Tweak dependencies so things work from a fresh
    checkout/build and not just after multiple builds.

2011-06-22  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/Makefile.am: Autogenerate command list based on the source
    files and store in generated_cmd_list.h.
  * src/cmd/cmd_list.h: Remove hardcoded command list and include new
    autogenerated header file.

2011-06-17  Mike Frysinger  <vapier@gentoo.org>

  * data/xilinx/PARTS: Add xilinx xc18v02pc44 parts by Steve Tell.
  * data/xilinx/xc18v02pc44/xc18v02pc44, data/xilinx/xc18v02pc44/STEPPINGS:
    Add data files for new xilinx parts.

  * src/bsdl/bsdl_sysdep.h: Use config.h directly.
  * src/bsdl/Makefile.am: Drop bsdl_config.h generation and dependencies.
  * .gitignore: Drop bsdl_config.h from ignore list.

2011-06-11  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/bf518f_ezbrd.c, src/bus/bf537_stamp.c, src/bus/bf561_ezkit.c,
    src/svf/svf.c, src/tap/cable/gpio.c, src/tap/cable/ice100.c: Fix set
    but not used warnings with gcc-4.6.

2011-05-10  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/usbconn/libftdi.c (usbconn_ftdi_common_open): Use the new interface
    option and call ftdi_set_interface with it.  Patch by Michael Walle.
